<resources>
    <string name="app_name">Find Players</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="remove_edit">Remove Game From Library</string>
    <string name="add_edit">Add Game to Library</string>
    <string name="switch_drawer">Open on start</string>
    <string name="tournament_messages_warning">You need to be in tournament to seeing messages</string>
    <string name="message_box">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_tournament_card">TournamentCardActivity</string>
    <string name="tab_text_1">Tournament</string>
    <string name="tab_text_2">Players</string>
    <string name="tab_text_3">Chat</string>
    <string name="tab_text_4">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="add_coment">Add comment</string>
    <string name="user_games">User Games</string>
    <string name="friends">Friends</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="users_owning_a_game">Users owning a game</string>
    <string name="comments">Comments</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="login">Log In</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_fill_all_fields">Please fill all fields</string>

    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="games">Games</string>
    <string name="tournaments">Tournaments</string>
    <string name="logout">Log Out</string>
    <string name="open_on_start">Open on start</string>
    <string name="first_place">First Place</string>
    <string name="choose_first_winner">Choose First Winner</string>
    <string name="choose_second_winner">Choose Second Winner</string>
    <string name="choose_third_winner">Choose Third Winner</string>
    <string name="send_winners">Send Winners</string>
    <string name="winners">Winners</string>
    <string name="write_news">Write News</string>
    <string name="First">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>

    <string name="my_tournaments">My Tournaments</string>
    <string name="newest_tournaments">Newest Tournaments</string>
    <string name="biggest_tournaments">Biggest Tournaments</string>
    <string name="ended_tournaments">Ended Tournaments</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="number_of_players">Number of Players</string>
    <string name="about_tournament">About Tournament</string>
    <string name="start_on">Start on: </string>
    <string name="tournament_password">Tournament Password</string>
    <string name="create">Create</string>
    <string name="choose">Choose</string>
    <string name="new_tournament">New Tournament</string>
    <string name="leave_tournament">Leave the tournament</string>
    <string name="join_tournament">Join the tournament</string>
    <string name="tournament_is_full_of_players">Tournament is full of players</string>

    <string name="my_games">My games</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="from">From: </string>
    <string name="notifications">Notifications</string>

</resources>
