<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.findplayers.app.findplayers.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_background"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:background="@drawable/fp_black"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="15dp"
                    android:text="Find Players"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/username"
                    android:textColorHint="#000000"
                    android:maxLines="1"
                    android:layout_marginTop="40dp"
                    android:drawableLeft="@drawable/ic_user"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />
                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="E-mail"
                    android:textColorHint="#000000"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_email"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />
                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:textColorHint="#000000"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />
                <EditText
                    android:id="@+id/reg_con_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/password_again"
                    android:textColorHint="#000000"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Spinner
                    android:id="@+id/countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Button
                    android:id="@+id/bn_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_signup"
                    android:layout_marginTop="40dp"
                    android:text="@string/sign_up"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
