<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="#E5E5E5"
    tools:context="eu.findplayers.app.findplayers.GamePageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/game_Image"
            android:scaleType="fitXY"
            android:transitionName="imageTransition" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/game_Name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_owning_a_game"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:paddingBottom="15dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true" />
            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:paddingBottom="15dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_game_comments"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="horizontal"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/comment_text"
                    android:layout_width="278dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/comment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/send_comment"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/send_comment"
                    android:layout_width="26dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_send_button" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_back_arrow"/>
    </RelativeLayout>

</RelativeLayout>

</RelativeLayout>