<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_down_layout"
    android:background="#E5E5E5"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context="eu.findplayers.app.findplayers.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_card"
                    android:paddingTop="100dp"
                    android:id="@+id/linearLayout">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_games"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textStyle="bold"
                        android:paddingBottom="15dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_frnd"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scrollbars="vertical"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true"
                        />
                    <View
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#E0E0E0" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/friends"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:paddingBottom="15dp"
                        android:textStyle="bold"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_friends_profile"
                        android:layout_width="match_parent"
                        android:layout_height="95dp"
                        android:orientation="horizontal"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="5dp"
                        android:paddingBottom="8dp"
                        card_view:cardUseCompatPadding="true" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="100dp"
                    android:layout_centerHorizontal="true"
                    android:transitionName="profileImageTransition"/>

                <Button
                    android:id="@+id/choose_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_blue"
                    android:text="@string/edit" />
                <Button
                    android:id="@+id/save_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_blue"
                    android:text="@string/save"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:layout_below="@+id/profile_image"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_back_arrow" />
        </RelativeLayout>
    </RelativeLayout>

    <!--
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="My Games"
                        android:textSize="20sp"
                        android:background="@drawable/user_profile_card_top"
                        android:paddingLeft="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#E0E0E0" />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_frnd"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scrollbars="vertical"
                        android:background="@drawable/user_profile_card_bottom"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true"
                        />
                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Friends"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/user_profile_card_top"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E0E0E0" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_friends_profile"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:orientation="horizontal"
                    android:background="@drawable/user_profile_card_bottom"
                    card_view:cardCornerRadius="5dp"
                    card_view:cardElevation="5dp"
                    android:paddingBottom="8dp"
                    card_view:cardUseCompatPadding="true" />


            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_marginTop="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_back_arrow"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>
    </RelativeLayout>

    -->

</android.support.v4.widget.SwipeRefreshLayout>
